--- a/src/assets/_test2.html
+++ b/src/assets/_test2.html
@@ -43,7 +43,7 @@ let DYElement = class extends HTMLElement {
 	}
 
 	static get $style(){
-		return this.$template.find('style')[0]
+		return this.$template.find('style')
 	}*/
 	
 	get $template(){
@@ -51,7 +51,7 @@ let DYElement = class extends HTMLElement {
 	}
 
 	get $style(){
-		return wrap(this.root.querySelector('style')[0])
+		return wrap(this.root.querySelector('style'))
 	}
 
 	get root(){
